--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
           Cost per person per hour (in &pound;)<br />
           <input type="text" ng-model="costPerHour" />
         </p>
+        <p>
+          Meeting length (in minutes)<br />
+          <input type="text" ng-model="meetingLengthInMinutes" />
+        </p>
+        <p>Estimated cost of meeting: {{costForTime(meetingLengthInMinutes * 60) | currency:"&pound;"}}</p>
         <input type="submit" value="Start!" />
       </form>
 
