--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </p>
         <p>
           Cost per person per hour (in &pound;)<br />
+          (double salary to get rough cost for company)<br />
           <input type="text" ng-model="costPerHour" />
         </p>
         <p>
