--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         </p>
         <p>
           Cost per person per hour (in &pound;)<br />
-          (double salary to get rough cost for company)<br />
+          (double salary per hour to get rough cost for company)<br />
           <input type="text" ng-model="costPerHour" />
         </p>
         <p>
