Add counter for meeting overrunning
It only shows minutes and seconds, but if your meeting overruns by an hour, you may have bigger problems.

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,11 @@
 
       <div id="main-panel" ng-show="started" >
         <p class="total-cost">{{ totalCost | currency:"&pound;" }}</p>
-        <div id="progress-bar"></div>
+        <div id="progress-bar" ng-hide="meetingHasExceededLength()"></div>
+        <div ng-show="meetingHasExceededLength()">
+          Your meeting has overrun by:
+          <p>{{meetingOverrunBySeconds() * 1000 | date:"mm:ss"}}</p>
+        </div>
         <p>
           Number of people: {{numberOfPeople}}
           <input type="button" ng-click="decrementPeople()" value="-" />
