--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
         <div id="progress-bar" ng-hide="meetingHasExceededLength()"></div>
         <div ng-show="meetingHasExceededLength()">
           Your meeting has overrun by:
-          <p>{{meetingOverrunBySeconds() * 1000 | date:"mm:ss"}}</p>
+          <p class="overrun-time">{{meetingOverrunBySeconds() * 1000 | date:"mm:ss"}}</p>
         </div>
-        <p>
+        <p class="people-count">
           Number of people: {{numberOfPeople}}
           <input type="button" ng-click="decrementPeople()" value="-" />
           <input type="button" ng-click="incrementPeople()" value="+" />
