--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,18 @@
       <form ng-submit="startMeeting()" ng-hide="started">
         <p>
           <p>Number of people</p>
-          <p><input type="text" ng-model="numberOfPeople" /></p>
+          <p><input type="number" ng-model="numberOfPeople" /></p>
         </p>
         <p>
           <p>
             Cost per person per hour (in &pound;)<br />
             (double salary per hour to get rough cost for company)
           </p>
-          <p><input type="text" ng-model="costPerHour" /></p>
+          <p><input type="number" ng-model="costPerHour" /></p>
         </p>
         <p>
           <p>Meeting length (in minutes)</p>
-          <p><input type="text" ng-model="meetingLengthInMinutes" /></p>
+          <p><input type="number" ng-model="meetingLengthInMinutes" /></p>
         </p>
         <p>Estimated cost of meeting: {{costForTime(meetingLengthInSeconds()) | currency:"&pound;"}}</p>
         <input type="submit" value="Start!" />
